// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render as another element 1`] = `
<div>
  <p
    class="css-1ragr82-PolymorphicDiv emotion-0"
  >
    <span />
  </p>
</div>
`;

exports[`props should render correctly 1`] = `
<div>
  <div
    class="css-1ragr82-PolymorphicDiv emotion-0"
  >
    <span />
  </div>
</div>
`;

exports[`props should render with custom styles (Array) 1`] = `
<div>
  <p
    class="css-1ragr82-PolymorphicDiv emotion-0"
  >
    <span />
  </p>
</div>
`;

exports[`props should render with custom styles (object) 1`] = `
<div>
  <p
    class="css-1ragr82-PolymorphicDiv emotion-0"
  >
    <span />
  </p>
</div>
`;

exports[`props should render with custom styles (string) 1`] = `
<div>
  <p
    class="css-1ragr82-PolymorphicDiv emotion-0"
  >
    <span />
  </p>
</div>
`;
